--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <script>
     $(document).ready(function(){
     $("#webDesignContainer1").hide();
@@ -25,18 +28,50 @@
         a{
         text-decoration:none;
         }
+        h5{
+        text-align:center;
+        }
     </style>
 </head>
 
 <body>
 <div class="container-fluid">
     <div class="row">
-        <div class=" col-xs-12" style="background-color:aqua">
-            <div class="col-xs-4 h3">Logo</div>
+        <div class=" col-xs-12" style="margin-bottom:70px">
+            <nav class="navbar navbar-default navbar-fixed-top">
+                <div class="container-fluid">
+                    <!-- Brand and toggle get grouped for better mobile display -->
+                    <div class="navbar-header">
+                        <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <!--<div class ="col-xs-12 col-sm-8 col-md-4">
+                        <a href="#" class="navbar-brand">Logo</a>
+                        </div>-->
+                    </div>
+                    <!-- Collection of nav links and other content for toggling -->
+                    <div id="navbarCollapse" class=" collapse navbar-collapse col-xs-12" style="background:yellow; width:100%" >
+                        <ul class="nav navbar-nav col-xs-12" >
+                            <li class=" col-xs-12 col-sm-1 col-md-4 col-ls-3"><a href="#logo">Logo</a></li>
+                            <li class=" col-xs-12 col-sm-1 col-md-2 col-ls-3"><a href="#home">Home</a></li>
+                            <li class=" col-xs-12 col-sm-1 col-md-2 col-ls-3"><a href="#about">About Us</a></li>
+                            <li class=" col-xs-12 col-sm-1 col-md-2 col-ls-3"><a href="#service">Services</a></li>
+                            <li class=" col-xs-12 col-sm-1 col-md-2 col-ls-3"><a href="#contactus">Contact Us</a></li>
+                        </ul>
+                        <!--<ul class="nav navbar-nav navbar-right">
+                            <li><a href="#">Login</a></li>
+                        </ul>-->
+                    </div>
+                </div>
+            </nav>
+            <!--<div class="col-xs-4 h3">Logo</div>
             <div class="col-xs-2 "><a class="h4" href="#home" style="text-decoration:none;">Home</a></div>
             <div class="col-xs-2 "><a class="h4" href="#about" style="text-decoration:none;">About Us</a></div>
             <div class="col-xs-2 "><a class="h4" href="#service" style="text-decoration:none;">Services</a></div>
-            <div class="col-xs-2 "><a class="h4" href="#contact" style="text-decoration:none;">Contact</a></div>
+            <div class="col-xs-2 "><a class="h4" href="#contact" style="text-decoration:none;">Contact</a></div>-->
         </div>
         <div class="col-xs-12" style="background-color:#F6F6F6" id="home">
             <div id="myCarousel" class="carousel slide col-md-10 col-md-offset-1" data-ride="carousel">
@@ -73,11 +108,12 @@
                 </a>
             </div>
         </div>
-        <div class="col-xs-12" id="about">
+
+        <div class="col-xs-12" id="about" style="margin-top:100px">
             <div class="col-md-5 col-md-offset-4" style="margin-bottom:50px;">
                 <h2 style="text-align:center ; font-weight : bold">About us</h2>
                 <hr/>
-                <p class="text-primary"> Hello my name is umang kesari and i am working in knoldus</p>
+                <p class="text-primary" style="text-align:center"> Welcome to Canvass Food Services !!!!!!</p>
             </div>
 
 
@@ -109,55 +145,59 @@
         </div>
         <div class="col-xs-12" style="background-color:#E0E0E0" id="service">
             <div class="col-md-5 col-md-offset-4" >
-                <h2 style="text-align:center">Services</h2>
+                <h2 style="text-align:center, margin-top=50px">Services</h2>
                 <hr/>
-                <p class="text-primary"> Hello my name is umang kesari and i am working in knoldus</p>
+                <p class="text-primary" style="text-align:center">We provide our services to birthday parties,weddings etc</p>
             </div>
 
             <div class="col-xs-12">
-                <div class="col-xs-3">
-                    <img src="zoon.png" alt="smallFood" class="img-circle" style="margin-left:20%"><br>
-                    <label class="h3 text-primary"> Fully Responsive</label><br>
+                <div class="col-xs-12 col-sm-12 col-md-3" style="margin-bottom:50px">
+                    <img src="zoon.png" alt="smallFood" class="img-circle center-block"><br>
+                    <h5 class="h3 text-primary"> Fully Responsive</h5><br>
                     <span class="text-primary"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
                 </div>
-                <div class="col-xs-3">
-                    <img src="minnion.jpg" alt="smallFood" class="img-circle" style="margin-left:20%"><br>
-                    <label class="h3 text-primary"> Retina Ready</label><br>
+                <div class="col-xs-12 col-sm-12 col-md-3">
+                    <img src="minnion.jpg" alt="smallFood" class="img-circle center-block"><br>
+                    <h5 class="h3 text-primary" > Retina Ready</h5><br>
                     <span class="text-primary"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
                 </div>
-                <div class="col-xs-3">
-                    <img src="minnion.jpg" alt="smallFood" class="img-circle" style="margin-left:20%"><br>
-                    <label class="h3 text-primary"> Retina Ready</label><br>
+                <div class="col-xs-12 col-sm-12 col-md-3">
+                    <img src="minnion.jpg" alt="smallFood" class="img-circle center-block" ><br>
+                    <h5 class="h3 text-primary"> Fresh and Clean</h5><br>
                     <span class="text-primary"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
                 </div>
-                <div class="col-xs-3">
-                    <img src="minnion.jpg" alt="smallFood" class="img-circle" style="margin-left:20%"><br>
-                    <label class="h3 text-primary"> Retina Ready</label><br>
+                <div class="col-xs-12 col-sm-12 col-md-3">
+                    <img src="minnion.jpg" alt="smallFood" class="img-circle center-block"><br>
+                    <h5 class="h3 text-primary"> Easy to Customize</h5><br>
                     <span class="text-primary"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
                 </div>
             </div>
         </div>
             <div class="col-xs-12" style="margin-top:50px">
-                <div class="col-xs-4">
-                    <img src="minnion.jpg" alt="smallFood" class="img-circle" style="margin-left:20%"><br>
-                    <label class="h3 text-primary"> Retina Ready</label><br>
+                <div class="col-xs-12 col-sm-12 col-md-4">
+
+                    <i class="fa fa-book" aria-hidden="true" style="margin-left:50%"></i>
+                    <br>
+                    <h5 class="h3 text-primary"> Multi Purpose</h5><br>
                     <span class="text-primary"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
                 </div>
-                <div class="col-xs-4">
-                    <img src="minnion.jpg" alt="smallFood" class="img-circle" style="margin-left:20%"><br>
-                    <label class="h3 text-primary"> Retina Ready</label><br>
+                <div class="col-xs-12 col-sm-12 col-md-4" >
+                    <i class="fa fa-heart-o" aria-hidden="true" style="margin-left:50%"></i>
+                    <br>
+                    <h5 class="h3 text-primary"> Quick Support</h5><br>
                     <span class="text-primary"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
                 </div>
-                <div class="col-xs-4">
-                    <img src="minnion.jpg" alt="smallFood" class="img-circle" style="margin-left:20%"><br>
-                    <label class="h3 text-primary"> Retina Ready</label><br>
+                <div class="col-xs-12 col-sm-12 col-md-4">
+                    <i class="fa fa-cloud" aria-hidden="true" style="margin-left:50%"></i>
+
+                    <h5 class="h3 text-primary"> Friendly Code</h5><br>
                     <span class="text-primary"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
                 </div>
 
             </div>
-            <div class="col-xs-12" style="background-color:#F0F0F0" id="contact">
-                <div class="col-xs-6 h2">Fully Responsive</div>
-                <div class="form-group col-xs-6">
+            <div class="col-xs-12" style="background-color:#F0F0F0 ; margin-top:50px" id="contact">
+                <div class="col-xs-12 col-sm-12 col-md-6">Fully Responsive</div>
+                <div class="form-group col-xs-12 col-sm-12 col-md-6">
                     <h2 style="text-align:center">Drop Your Message</h2>
                     <div class="form-group">
                         <label>Your Name</label>
@@ -182,10 +222,30 @@
                 </div>
 
             </div>
-            <div class="col-xs-12">
-                <div class="col-xs-4">About Us</div>
-                <div class="col-xs-4">PhotoGallery</div>
-                <div class="col-xs-4">NewsLetter Registration</div>
+            <div class="col-xs-12" style="background-color:#DAB273;">
+
+                <div class="col-xs-4 col-sm-4 col-md-4" style="margin-top:50px"><h4>About Us</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+               <div class="col-xs-4">
+                   <div class="col-xs-4" style="margin-top:50px"><h4>PhotoGallery</h4>
+                       <div class="col-xs-12">
+                           <div class="col-xs-6"><img src="minionTwin.jpg" alt="minion Twins"></div>
+                           <div class="col-xs-6"><img src="minionTwin.jpg" alt="minion Twins"></div>
+                       </div>
+                       <div class="col-xs-12">
+                           <div class="col-xs-6"><img src="minionTwin.jpg" alt="minion Twins"></div>
+                           <div class="col-xs-6"><img src="minionTwin.jpg" alt="minion Twins"></div>
+                       </div>
+                       <div class="col-xs-12">
+                           <div class="col-xs-6"><img src="minionTwin.jpg" alt="minion Twins"></div>
+                           <div class="col-xs-6"><img src="minionTwin.jpg" alt="minion Twins"></div>
+                       </div>
+                   </div>
+               </div>
+                <div class="col-xs-4 col-sm-4 col-md-4" style="margin-top:50px">
+                    <h4>NewsLetter Registration</h4>
+                </div>
             </div>
         </div>
     </div>
