--- a/index.html
+++ b/index.html
@@ -31,13 +31,21 @@
         h5{
         text-align:center;
         }
+        left{
+        margin-bottom:20px ;
+        margin-left: 100px ;
+        }
+        right{
+        margin-bottom:20px ;
+        margin-left: 100px ;
+        }
     </style>
 </head>
 
 <body>
 <div class="container-fluid">
     <div class="row">
-        <div class=" col-xs-12" style="margin-bottom:70px">
+        <div class=" col-xs-12" >
             <nav class="navbar navbar-default navbar-fixed-top">
                 <div class="container-fluid">
                     <!-- Brand and toggle get grouped for better mobile display -->
@@ -59,7 +67,7 @@
                             <li class=" col-xs-12 col-sm-1 col-md-2 col-ls-3"><a href="#home">Home</a></li>
                             <li class=" col-xs-12 col-sm-1 col-md-2 col-ls-3"><a href="#about">About Us</a></li>
                             <li class=" col-xs-12 col-sm-1 col-md-2 col-ls-3"><a href="#service">Services</a></li>
-                            <li class=" col-xs-12 col-sm-1 col-md-2 col-ls-3"><a href="#contactus">Contact Us</a></li>
+                            <li class=" col-xs-12 col-sm-1 col-md-2 col-ls-3"><a href="#contact">Contact Us</a></li>
                         </ul>
                         <!--<ul class="nav navbar-nav navbar-right">
                             <li><a href="#">Login</a></li>
@@ -73,7 +81,7 @@
             <div class="col-xs-2 "><a class="h4" href="#service" style="text-decoration:none;">Services</a></div>
             <div class="col-xs-2 "><a class="h4" href="#contact" style="text-decoration:none;">Contact</a></div>-->
         </div>
-        <div class="col-xs-12" style="background-color:#F6F6F6" id="home">
+        <div class="col-xs-12" style="background-color:#F6F6F6 ; margin-top:50px" id="home">
             <div id="myCarousel" class="carousel slide col-md-10 col-md-offset-1" data-ride="carousel">
                 <!-- Indicators -->
                 <ol class="carousel-indicators">
@@ -83,7 +91,7 @@
                 </ol>
 
                 <!-- Wrapper for slides -->
-                <div class="carousel-inner">
+                <div class="carousel-inner" style="margin-top:50px">
                     <div class="item active">
                         <img src="food.jpg" alt="Los Angeles" style="width:100%; height:350px">
                     </div>
@@ -109,11 +117,11 @@
             </div>
         </div>
 
-        <div class="col-xs-12" id="about" style="margin-top:100px">
+        <div class="col-xs-12" id="about">
             <div class="col-md-5 col-md-offset-4" style="margin-bottom:50px;">
-                <h2 style="text-align:center ; font-weight : bold">About us</h2>
+                <h2 style="text-align:center ; font-weight : bold ; margin-top:50px">About us</h2>
                 <hr/>
-                <p class="text-primary" style="text-align:center"> Welcome to Canvass Food Services !!!!!!</p>
+                <p class="text-primary" style="text-align:center"> Welcome to Canvass Food Services Ltd</p>
             </div>
 
 
@@ -143,11 +151,11 @@
                 </div>
             </div>
         </div>
-        <div class="col-xs-12" style="background-color:#E0E0E0" id="service">
+        <div class="col-xs-12" style="background-color:#E0E0E0; margin-top:100px " id="service">
             <div class="col-md-5 col-md-offset-4" >
-                <h2 style="text-align:center, margin-top=50px">Services</h2>
+                <h2 style="text-align:center ; margin-top:50px">Services</h2>
                 <hr/>
-                <p class="text-primary" style="text-align:center">We provide our services to birthday parties,weddings etc</p>
+                <p class="text-primary" style="text-align:center">We provide our services to birthday parties, weddings etc</p>
             </div>
 
             <div class="col-xs-12">
@@ -176,19 +184,19 @@
             <div class="col-xs-12" style="margin-top:50px">
                 <div class="col-xs-12 col-sm-12 col-md-4">
 
-                    <i class="fa fa-book" aria-hidden="true" style="margin-left:50%"></i>
+                    <i class="fa fa-book fa-5x" aria-hidden="true" style="margin-left:50% ; background-color:#D9AE6A"></i>
                     <br>
-                    <h5 class="h3 text-primary"> Multi Purpose</h5><br>
+                    <h5 class="h3 text-primary" style="text-align : middle"> Multi Purpose</h5><br>
                     <span class="text-primary"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-4" >
-                    <i class="fa fa-heart-o" aria-hidden="true" style="margin-left:50%"></i>
+                    <i class="fa fa-heart-o fa-5x" aria-hidden="true" style="margin-left:50% ; background-color:#D9AE6A"></i>
                     <br>
                     <h5 class="h3 text-primary"> Quick Support</h5><br>
                     <span class="text-primary"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-4">
-                    <i class="fa fa-cloud" aria-hidden="true" style="margin-left:50%"></i>
+                    <i class="fa fa-cloud fa-5x" aria-hidden="true" style="margin-left:50% ; background-color:#D9AE6A "></i>
 
                     <h5 class="h3 text-primary"> Friendly Code</h5><br>
                     <span class="text-primary"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</span>
@@ -228,23 +236,28 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
                <div class="col-xs-4">
-                   <div class="col-xs-4" style="margin-top:50px"><h4>PhotoGallery</h4>
-                       <div class="col-xs-12">
-                           <div class="col-xs-6"><img src="minionTwin.jpg" alt="minion Twins"></div>
-                           <div class="col-xs-6"><img src="minionTwin.jpg" alt="minion Twins"></div>
+                   <div class="col-xs-4" style="margin-top:50px; text-align: center"><h4>PhotoGallery</h4>
+                       <div class="col-xs-12" >
+                           <div class="col-xs-6"><img src="minionTwin.jpg" alt="minion Twins" style="margin-bottom:20% ;margin-left: 100px"></div>
+                           <div class="col-xs-6"><img src="minionTwin.jpg" alt="minion Twins" style="margin-bottom:20% ; margin-right:20%"></div>
                        </div>
                        <div class="col-xs-12">
-                           <div class="col-xs-6"><img src="minionTwin.jpg" alt="minion Twins"></div>
-                           <div class="col-xs-6"><img src="minionTwin.jpg" alt="minion Twins"></div>
+                           <div class="col-xs-6"><img src="minionTwin.jpg" alt="minion Twins" style="margin-bottom:20% ;margin-left: 100px"></div>
+                           <div class="col-xs-6"><img src="minionTwin.jpg" alt="minion Twins" style="margin-bottom:20% ; margin-right:20%"></div>
                        </div>
                        <div class="col-xs-12">
-                           <div class="col-xs-6"><img src="minionTwin.jpg" alt="minion Twins"></div>
-                           <div class="col-xs-6"><img src="minionTwin.jpg" alt="minion Twins"></div>
+                           <div class="col-xs-6"><img src="minionTwin.jpg" alt="minion Twins" style="margin-bottom:20% ;margin-left: 100px"></div>
+                           <div class="col-xs-6"><img src="minionTwin.jpg" alt="minion Twins" style="margin-bottom:20% ; margin-right:20%"></div>
                        </div>
                    </div>
                </div>
                 <div class="col-xs-4 col-sm-4 col-md-4" style="margin-top:50px">
                     <h4>NewsLetter Registration</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+                    <input type="email" class="form-control" placeholder="Enter Your Email">
+                    <br/>
+                    <button type="submit">SUBMIT</button>
                 </div>
             </div>
         </div>
